Add pagina choose-pets y fetch GET

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div class='absolute z-[-2] top-0 bottom-0 bg-[#E9E9E7] dark:bg-[#242424] min-h-screen w-full'></div>
-    <div id="root"></div>
+    <div class='z-[-2] bg-[#E9E9E7] dark:bg-[#242424]'>
+      <div id="root"></div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
