--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/dog.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Adoptar - Mascotas</title>
+    <meta name="desciption" content="Web de prueba, para la adopción de mascotas"/>
   </head>
   <body>
     <div class='z-[-2] bg-[#E9E9E7] dark:bg-[#242424]'>
